# atmaCup_no8

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebook_downloads/: 講座1_データを眺めて_submission_をする.ipynb
notebooks/: etc.ipynb  nb001.ipynb  nb002.ipynb  nb003.ipynb  nb004.ipynb  nb004_LB088.ipynb  nb005.ipynb  nb006.ipynb
