[tool.poetry]
name = "atmacap_no8"
version = "0.1.0"
description = "atmaCap"
authors = ["ironball"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.9"

[tool.poetry.dev-dependencies]
pandas = "^1.1.4"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
